--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.16.1",
+    "radium": "^0.18.2",
     "react": "^15.5.4",
     "react-dom": "^15.5.4"
   },
