--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.1",
     "cookie-parser": "^1.4.3",
+    "cookie-session": "^2.0.0-beta.1",
     "errorhandler": "^1.5.0",
     "express": "^4.15.2",
     "express-session": "^1.15.2",
@@ -14,6 +15,7 @@
     "morgan": "^1.8.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.0.0",
     "radium": "^0.18.2",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
