--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "errorhandler": "^1.5.0",
     "express": "^4.15.2",
     "express-session": "^1.15.2",
+    "foreman": "^2.0.0",
     "mongoose": "^4.9.5",
     "morgan": "^1.8.1",
     "passport": "^0.3.2",
@@ -27,7 +28,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test":  "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "start-dev": "nf start -p 3000"
   }
 }
