--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jsonwebtoken": "^7.4.0",
     "mongoose": "^4.9.5",
     "morgan": "^1.8.1",
+    "nodemon": "^1.11.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.0.0",
@@ -28,6 +29,7 @@
     "react-scripts": "0.9.5"
   },
   "scripts": {
-    "start": "node ./server/server"
+    "start": "node ./server/server",
+    "nm": "nodemon ./server/server"
   }
 }
