--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-modal": "^1.7.7",
-    "react-router": "^2.4.1",
-    "rodal": "^1.5.0",
-    "simple-react-modal": "^0.5.1"
+    "react-router": "^2.4.1"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
