--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "s": "node ./server/server",
     "nm": "nodemon ./server/server.js",
     "build": "react-scripts build",
+    "bs": "react-scripts build && node ./server/server",
     "bw": "react-scripts build -w"
   }
 }
