--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "radium": "^0.18.2",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-html5video": "^2.1.0",
     "react-modal": "^1.7.7",
     "react-router": "^2.4.1"
   },
