--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-modal": "^1.7.7",
+    "react-notification-system": "^0.2.14",
     "react-router": "^2.4.1",
     "react-tabs": "^0.8.3"
   },
