add homepage to relative path .

--- a/package.json
+++ b/package.json
@@ -35,5 +35,6 @@
     "bs": "react-scripts build && node ./server/server",
     "start": "react-scripts start",
     "postinstall": "react-scripts build"
-  }
+  },
+  "homepage": "."
 }
