--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
   "scripts": {
     "build": "react-scripts build",
     "bs": "react-scripts build && node ./server/server",
-    "start": "react-scripts start",
-    "postinstall": "react-scripts build"
+    "start": "node server/server.js",
+    
   },
   "homepage": "."
 }
